# parallelprog-labs

./: .gitignore  CHANGELOG.md  README.md  parallelprog-labs.cabal
lab1/: Cargo.toml  Main.hs
lab1-haskell/: parallelprog-labs.cabal
lab1/src/: main.rs
lab2/: Cargo.toml
lab2/src/: cpu.rs  cpuprocess.rs  cpuqueue.rs  cputask.rs  main.rs  utils.rs
lab3/: .project  Cargo.toml  build.gradle  settings.gradle
lab3/gradle/wrapper/: gradle-wrapper.properties
lab3/src/: main.rs
lab3/src/main/java/lab3/: Lab3.java  Main.java
lab4/: build.gradle  settings.gradle
lab4/gradle/wrapper/: gradle-wrapper.properties
lab4/src/main/java/philosopher/: Fork.java  Main.java  Philocopher.java  Philosopher.java
lab4/src/main/java/playground/: Main.java
lab4/src/main/java/producer_consumer/: Consumer.java  Main.java  Producer.java  Task.java  TaskQueue.java
lab4/src/main/java/sleeping_barber/: Barber.java  Barbershop.java  Customer.java  CustomerProducer.java  Main.java  WaitingRoom.java
lab4/src/main/java/writer_reader/: Book.java  Main.java  Reader.java  Writer.java
lab5/: build.gradle  settings.gradle
lab5/src/main/java/lab5/: Main.java
lab6/: Makefile  compile_commands.json  lab6  main.c  master.h  utils.h  worker.h
lab6/.clangd/index/: main.c.0DD11C099DCEB494.idx  master.h.9783698BC4A1CD0F.idx  utils.h.E27BEBBE22B188FA.idx  worker.h.B06AF04DBD8E2913.idx
lab6/src/: main.c  master.h  utils.h  worker.h
prod-cons-go/: go.mod  main.go
